--- a/Modelisation.ipynb
+++ b/Modelisation.ipynb
@@ -922,7 +922,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La winsorisation pour l'ensemble des varibles quantitatives"
+    "La winsorisation pour l'ensemble des variables quantitatives"
    ]
   },
   {
