--- a/Paloma_stat_desc.ipynb
+++ b/Paloma_stat_desc.ipynb
@@ -2112,6 +2112,23 @@
    "source": [
     "phgfhg"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello\")"
+   ]
   }
  ],
  "metadata": {
