--- a/Paloma_stat_desc.ipynb
+++ b/Paloma_stat_desc.ipynb
@@ -2129,6 +2129,16 @@
    "source": [
     "print(\"hello\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On convertit la base de données existante en fichier cvs \n",
+    "df_with_missing.to_csv('df_with_missing.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
