--- a/Paloma_stat_desc.ipynb
+++ b/Paloma_stat_desc.ipynb
@@ -419,12 +419,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Suppression des doublons\n",
-    "#df = df.drop_duplicates()"
+    "Suppression des doublons\n",
+    "df = df.drop_duplicates()"
    ]
   },
   {
@@ -862,7 +862,7 @@
     "missing_data = missing_data[missing_data > 0]\n",
     "\n",
     "# Afficher les variables ayant des valeurs manquantes et le nombre de valeurs manquantes\n",
-    "print(missing_data)"
+    "print(missing_data)\n"
    ]
   },
   {
@@ -907,7 +907,7 @@
     "# Identifier les colonnes avec des valeurs manquantes\n",
     "missing_columns = missing_data.index.tolist()\n",
     "\n",
-    "# Ajouter les colonnes 'postes' et 'dates' si elles ne sont pas déjà dans missing_columns\n",
+    "# Ajouter les colonnes et 'dates' si elles ne sont pas déjà dans missing_columns\n",
     "important_columns = ['DATE']\n",
     "for col in important_columns:\n",
     "    if col not in missing_columns:\n",
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1069,238 +1069,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RR</th>\n",
-       "      <th>TN</th>\n",
-       "      <th>HTN</th>\n",
-       "      <th>TX</th>\n",
-       "      <th>HTX</th>\n",
-       "      <th>TM</th>\n",
-       "      <th>TMNX</th>\n",
-       "      <th>DG</th>\n",
-       "      <th>TAMPLI</th>\n",
-       "      <th>TNTXM</th>\n",
-       "      <th>...</th>\n",
-       "      <th>UX</th>\n",
-       "      <th>HUX</th>\n",
-       "      <th>DHUMI40</th>\n",
-       "      <th>DHUMI80</th>\n",
-       "      <th>TSVM</th>\n",
-       "      <th>UM</th>\n",
-       "      <th>ETPGRILLE</th>\n",
-       "      <th>NEIGETOTX</th>\n",
-       "      <th>NEIGETOT06</th>\n",
-       "      <th>DATE</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>POSTE</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1014002</th>\n",
-       "      <td>2.6</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>1759.0</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1217.0</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>389.0</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>329.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1157.0</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>20220105.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1014002</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-2.5</td>\n",
-       "      <td>1746.0</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>1327.0</td>\n",
-       "      <td>-0.6</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>964.0</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>...</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>2304.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1043.0</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>20220106.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1014002</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>-6.9</td>\n",
-       "      <td>718.0</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>2229.0</td>\n",
-       "      <td>-1.2</td>\n",
-       "      <td>-2.65</td>\n",
-       "      <td>674.0</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>-2.7</td>\n",
-       "      <td>...</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>126.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1440.0</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>20220107.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1014002</th>\n",
-       "      <td>13.2</td>\n",
-       "      <td>-0.7</td>\n",
-       "      <td>733.0</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2319.0</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>2.80</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>618.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1231.0</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>89.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>20220108.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1014002</th>\n",
-       "      <td>7.6</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>737.0</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>601.0</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1.30</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>745.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1440.0</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>20220109.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           RR   TN     HTN   TX     HTX   TM  TMNX     DG  TAMPLI  TNTXM  ...  \\\n",
-       "POSTE                                                                     ...   \n",
-       "1014002   2.6 -0.4  1759.0  3.4  1217.0  0.9  1.50  389.0     3.8    1.5  ...   \n",
-       "1014002   0.0 -2.5  1746.0  4.3  1327.0 -0.6  0.90  964.0     6.8    0.9  ...   \n",
-       "1014002  10.0 -6.9   718.0  1.6  2229.0 -1.2 -2.65  674.0     8.5   -2.7  ...   \n",
-       "1014002  13.2 -0.7   733.0  6.3  2319.0  2.4  2.80   87.0     7.0    2.8  ...   \n",
-       "1014002   7.6  0.4   737.0  2.2   601.0  1.8  1.30    0.0     1.8    1.3  ...   \n",
-       "\n",
-       "           UX     HUX  DHUMI40  DHUMI80  TSVM    UM  ETPGRILLE  NEIGETOTX  \\\n",
-       "POSTE                                                                       \n",
-       "1014002  99.0   329.0      0.0   1157.0   5.7  88.0        0.4        0.0   \n",
-       "1014002  99.0  2304.0      0.0   1043.0   5.1  88.0        0.6        0.0   \n",
-       "1014002  99.0   126.0      0.0   1440.0   5.4  96.0        0.0        0.0   \n",
-       "1014002  99.0   618.0      0.0   1231.0   6.4  89.0        0.5        0.0   \n",
-       "1014002  98.0   745.0      0.0   1440.0   6.5  94.0        0.1        0.0   \n",
-       "\n",
-       "         NEIGETOT06        DATE  \n",
-       "POSTE                            \n",
-       "1014002         0.0  20220105.0  \n",
-       "1014002         0.0  20220106.0  \n",
-       "1014002         0.0  20220107.0  \n",
-       "1014002         0.0  20220108.0  \n",
-       "1014002         0.0  20220109.0  \n",
-       "\n",
-       "[5 rows x 31 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_with_missing.head()"
+    "df_with_missing.head()\n",
+    "df_with_missing['DATE'] = df_with_missing['DATE'].apply(lambda x: f.pd.to_datetime(str(int(x)), format='%Y%m%d'))\n",
+    "df_with_missing.to_csv('dataMod.csv', index=False)"
    ]
   },
   {
@@ -1326,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1384,15 +1159,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_with_missing.to_csv('dataModel.csv', index=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1420,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2093,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2156,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
