--- a/Modélisation_paloma.ipynb
+++ b/Modélisation_paloma.ipynb
@@ -1028,6 +1028,120 @@
    "source": [
     "### Modélisation"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modèle SARIMA :\n",
+    "\n",
+    "En tenant compte de la saisonnalité annuelle, un modèle SARIMA serait pertinent :\n",
+    "SARIMA(1, 1, 0) × (1, 1, 0, 365) ou\n",
+    "SARIMA(1, 1, 1) × (1, 1, 0, 365).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) SARIMA(1, 1, 0) × (1, 1, 0, 365)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
+    "from statsmodels.graphics.tsaplots import plot_acf\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
+    "# Fonction pour ajuster un modèle SARIMA et afficher les résultats\n",
+    "def fit_sarima_model(df, order, seasonal_order, model_name=\"\"):\n",
+    "    print(f\"\\n### Modèle {model_name} : SARIMA{order} × {seasonal_order} ###\")\n",
+    "    # Ajuster le modèle\n",
+    "    model = SARIMAX(df[\"TM\"], order=order, seasonal_order=seasonal_order)\n",
+    "    results = model.fit(disp=False)\n",
+    "    \n",
+    "    # Résumé du modèle\n",
+    "    print(results.summary())\n",
+    "    \n",
+    "    # Critères AIC et BIC\n",
+    "    aic = results.aic\n",
+    "    bic = results.bic\n",
+    "    print(f\"\\nCritères : AIC = {aic:.2f}, BIC = {bic:.2f}\")\n",
+    "    \n",
+    "    # Résidus du modèle\n",
+    "    residuals = results.resid\n",
+    "    \n",
+    "    # Visualisation des résidus\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.subplot(2, 1, 1)\n",
+    "    plt.plot(residuals)\n",
+    "    plt.title(\"Résidus\")\n",
+    "    plt.subplot(2, 1, 2)\n",
+    "    plot_acf(residuals, lags=50, ax=plt.gca())\n",
+    "    plt.title(\"ACF des résidus\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    # Vérification si les résidus sont du bruit blanc\n",
+    "    print(\"\\nTest des résidus :\")\n",
+    "    print(\"Moyenne des résidus :\", np.mean(residuals))\n",
+    "    print(\"Variance des résidus :\", np.var(residuals))\n",
+    "    \n",
+    "    # Prédictions dans la période d'entraînement\n",
+    "    fitted_values = results.fittedvalues\n",
+    "    \n",
+    "    # Calcul des erreurs (RMSE, MAE)\n",
+    "    rmse = np.sqrt(mean_squared_error(df[\"TM\"], fitted_values))\n",
+    "    mae = mean_absolute_error(df[\"TM\"], fitted_values)\n",
+    "    print(f\"RMSE = {rmse:.4f}, MAE = {mae:.4f}\")\n",
+    "    \n",
+    "    return results, aic, bic, rmse, mae\n",
+    "\n",
+    "# Modèle SARIMA(1, 1, 0) × (1, 1, 0, 365)\n",
+    "order_1 = (1, 1, 0)\n",
+    "seasonal_order_1 = (1, 1, 0, 365)\n",
+    "results_1, aic_1, bic_1, rmse_1, mae_1 = fit_sarima_model(\n",
+    "    df_standardise, order_1, seasonal_order_1, \"SARIMA(1, 1, 0) × (1, 1, 0, 365)\"\n",
+    ")\n",
+    "\n",
+    "# Modèle SARIMA(1, 1, 1) × (1, 1, 0, 365)\n",
+    "order_2 = (1, 1, 1)\n",
+    "seasonal_order_2 = (1, 1, 0, 365)\n",
+    "results_2, aic_2, bic_2, rmse_2, mae_2 = fit_sarima_model(\n",
+    "    df_standardise, order_2, seasonal_order_2, \"SARIMA(1, 1, 1) × (1, 1, 0, 365)\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Comparaison des modèles\n",
+    "print(\"\\n### Comparaison des modèles ###\")\n",
+    "print(f\"SARIMA(1, 1, 0) × (1, 1, 0, 365) : AIC = {aic_1:.2f}, BIC = {bic_1:.2f}, RMSE = {rmse_1:.4f}, MAE = {mae_1:.4f}\")\n",
+    "print(f\"SARIMA(1, 1, 1) × (1, 1, 0, 365) : AIC = {aic_2:.2f}, BIC = {bic_2:.2f}, RMSE = {rmse_2:.4f}, MAE = {mae_2:.4f}\")\n",
+    "\n",
+    "if aic_1 < aic_2 and rmse_1 < rmse_2:\n",
+    "    print(\"\\nLe modèle SARIMA(1, 1, 0) × (1, 1, 0, 365) est préférable.\")\n",
+    "else:\n",
+    "    print(\"\\nLe modèle SARIMA(1, 1, 1) × (1, 1, 0, 365) est préférable.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) SARIMA(1, 1, 1) × (1, 1, 0, 365)"
+   ]
   }
  ],
  "metadata": {
