--- a/data.ipynb
+++ b/data.ipynb
@@ -905,6 +905,99 @@
     "# On convertit la base de données existante en fichier cvs \n",
     "datameteo.to_csv('data.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Général\n",
+    "POSTE : Code ou identifiant de la station météorologique (ou du poste de mesure).\n",
+    "DATE : Date et heure des relevés météorologiques.\n",
+    "\n",
+    "Précipitations et Humidité\n",
+    "RR : Cumul des précipitations en millimètres (pluie tombée sur une période donnée).\n",
+    "DRR : Durée des précipitations (en heures ou minutes).\n",
+    "UM : Humidité moyenne (en %).\n",
+    "HUN : Heure de l'humidité minimale.\n",
+    "UX : Humidité maximale observée (%).\n",
+    "HUX : Heure de l'humidité maximale.\n",
+    "DHUMI40/DHUMI80 : Durée (en heures) pendant laquelle l’humidité relative dépasse 40% ou 80%.\n",
+    "DHUMEC : Durée d’humidité critique (périodes favorables à certaines conditions climatiques spécifiques, ex. moisissures).\n",
+    "\n",
+    "\n",
+    "Température\n",
+    "TN : Température minimale (°C).\n",
+    "HTN : Heure à laquelle la température minimale a été observée.\n",
+    "TX : Température maximale (°C).\n",
+    "HTX : Heure à laquelle la température maximale a été observée.\n",
+    "TM : Température moyenne (°C).\n",
+    "TMNX : Moyenne des températures minimales et maximales.\n",
+    "TNSOL : Température minimale au sol (°C).\n",
+    "TN50 : Température minimale à 50 cm du sol (°C).\n",
+    "TAMPLI : Amplitude thermique (écart entre température maximale et minimale).\n",
+    "TNTXM : Moyenne de la température minimale et maximale sur une période donnée.\n",
+    "TSVM : Température moyenne au sol.\n",
+    "\n",
+    "\n",
+    "Pression atmosphérique\n",
+    "PMERM : Pression moyenne au niveau de la mer (hPa).\n",
+    "PMERMIN : Pression minimale enregistrée au niveau de la mer.\n",
+    "\n",
+    "\n",
+    "Vents\n",
+    "FFM : Vitesse moyenne du vent (m/s ou km/h).\n",
+    "FXI : Rafale maximale de vent (intensité maximale, en m/s ou km/h).\n",
+    "DXI : Direction de la rafale maximale (en degrés).\n",
+    "HXI : Heure de la rafale maximale.\n",
+    "FF2M : Vitesse moyenne du vent à 2 mètres du sol.\n",
+    "FXI2/DXI2/HXI2 : Rafale maximale, direction et heure correspondantes à 2 mètres du sol.\n",
+    "FXI3S/DXI3S/HXI3S : Rafale maximale sur 3 secondes, direction et heure correspondantes.\n",
+    "\n",
+    "\n",
+    "Conditions météorologiques\n",
+    "NEIG : Indicateur de chute de neige (binaire ou cumul).\n",
+    "BROU : Indicateur de brouillard (présence ou non).\n",
+    "ORAG : Indicateur d'orage (binaire ou intensité).\n",
+    "GRESIL/GRELE : Présence de grésil ou de grêle.\n",
+    "ROSEE : Présence de rosée.\n",
+    "VERGLAS : Indicateur de verglas.\n",
+    "SOLNEIGE : Hauteur de neige au sol (cm).\n",
+    "GELEE : Indicateur de gelée au sol.\n",
+    "FUMEE : Indicateur de fumée dans l'air.\n",
+    "BRUME : Indicateur de brume.\n",
+    "ECLAIR : Observation d’éclairs ou d'activité orageuse.\n",
+    "\n",
+    "\n",
+    "Évapotranspiration\n",
+    "ETPMON : Évapotranspiration mensuelle (mm).\n",
+    "ETPGRILLE : Évapotranspiration potentielle sur grille (modélisation).\n",
+    "\n",
+    "\n",
+    "Indices UV\n",
+    "UV_INDICEX : Indice UV maximal observé (valeur de 0 à 11+).\n",
+    "UV : Indice UV instantané.\n",
+    "\n",
+    "\n",
+    "Conditions maritimes\n",
+    "TMERMAX : Température maximale de la mer (°C).\n",
+    "TMERMIN : Température minimale de la mer (°C).\n",
+    "\n",
+    "\n",
+    "Neige\n",
+    "HNEIGEF : Hauteur de neige fraîche tombée (cm).\n",
+    "NEIGETOTX : Cumul maximal de neige (cm).\n",
+    "NEIGETOT06 : Cumul de neige sur 6 heures.\n",
+    "\n",
+    "\n",
+    "Divers\n",
+    "INST : Insolation (durée d’ensoleillement, en heures).\n",
+    "GLOT : Globale totale (rayonnement global reçu, en W/m²).\n",
+    "DIFT : Diffus totale (partie diffusée du rayonnement global, en W/m²).\n",
+    "DIRT : Direct totale (rayonnement direct reçu, en W/m²).\n",
+    "SIGMA : Écart-type ou variabilité des mesures.\n",
+    "INFRART : Rayonnement infrarouge terrestre.\n",
+    "NB300/BA300 : Nombre ou durée d'éclairements UV > 300 nm (en minutes ou heures)."
+   ]
   }
  ],
  "metadata": {
