--- a/Mod__Fahmiya.ipynb
+++ b/Mod__Fahmiya.ipynb
@@ -9,11 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting python-dotenv\n",
-      "  Downloading python_dotenv-1.0.1-py3-none-any.whl.metadata (23 kB)\n",
-      "Downloading python_dotenv-1.0.1-py3-none-any.whl (19 kB)\n",
-      "Installing collected packages: python-dotenv\n",
-      "Successfully installed python-dotenv-1.0.1\n",
+      "Requirement already satisfied: python-dotenv in /opt/conda/lib/python3.12/site-packages (1.0.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
