--- a/Modelisation_Fahmiya.ipynb
+++ b/Modelisation_Fahmiya.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,6 +60,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>DATE</th>\n",
        "      <th>RR</th>\n",
        "      <th>TN</th>\n",
        "      <th>HTN</th>\n",
@@ -69,8 +70,8 @@
        "      <th>TMNX</th>\n",
        "      <th>DG</th>\n",
        "      <th>TAMPLI</th>\n",
-       "      <th>TNTXM</th>\n",
        "      <th>...</th>\n",
+       "      <th>HUN</th>\n",
        "      <th>UX</th>\n",
        "      <th>HUX</th>\n",
        "      <th>DHUMI40</th>\n",
@@ -80,12 +81,12 @@
        "      <th>ETPGRILLE</th>\n",
        "      <th>NEIGETOTX</th>\n",
        "      <th>NEIGETOT06</th>\n",
-       "      <th>DATE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2022-01-05</td>\n",
        "      <td>2.6</td>\n",
        "      <td>-0.4</td>\n",
        "      <td>1759.0</td>\n",
@@ -95,8 +96,8 @@
        "      <td>1.50</td>\n",
        "      <td>389.0</td>\n",
        "      <td>3.8</td>\n",
-       "      <td>1.5</td>\n",
        "      <td>...</td>\n",
+       "      <td>1244.0</td>\n",
        "      <td>99.0</td>\n",
        "      <td>329.0</td>\n",
        "      <td>0.0</td>\n",
@@ -106,10 +107,10 @@
        "      <td>0.4</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>20220105.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2022-01-06</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-2.5</td>\n",
        "      <td>1746.0</td>\n",
@@ -119,8 +120,8 @@
        "      <td>0.90</td>\n",
        "      <td>964.0</td>\n",
        "      <td>6.8</td>\n",
-       "      <td>0.9</td>\n",
        "      <td>...</td>\n",
+       "      <td>1032.0</td>\n",
        "      <td>99.0</td>\n",
        "      <td>2304.0</td>\n",
        "      <td>0.0</td>\n",
@@ -130,10 +131,10 @@
        "      <td>0.6</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>20220106.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2022-01-07</td>\n",
        "      <td>10.0</td>\n",
        "      <td>-6.9</td>\n",
        "      <td>718.0</td>\n",
@@ -143,8 +144,8 @@
        "      <td>-2.65</td>\n",
        "      <td>674.0</td>\n",
        "      <td>8.5</td>\n",
-       "      <td>-2.7</td>\n",
        "      <td>...</td>\n",
+       "      <td>708.0</td>\n",
        "      <td>99.0</td>\n",
        "      <td>126.0</td>\n",
        "      <td>0.0</td>\n",
@@ -154,10 +155,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>20220107.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>2022-01-08</td>\n",
        "      <td>13.2</td>\n",
        "      <td>-0.7</td>\n",
        "      <td>733.0</td>\n",
@@ -167,8 +168,8 @@
        "      <td>2.80</td>\n",
        "      <td>87.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>2.8</td>\n",
        "      <td>...</td>\n",
+       "      <td>1403.0</td>\n",
        "      <td>99.0</td>\n",
        "      <td>618.0</td>\n",
        "      <td>0.0</td>\n",
@@ -178,10 +179,10 @@
        "      <td>0.5</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>20220108.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>2022-01-09</td>\n",
        "      <td>7.6</td>\n",
        "      <td>0.4</td>\n",
        "      <td>737.0</td>\n",
@@ -191,8 +192,8 @@
        "      <td>1.30</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.8</td>\n",
-       "      <td>1.3</td>\n",
        "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>98.0</td>\n",
        "      <td>745.0</td>\n",
        "      <td>0.0</td>\n",
@@ -202,7 +203,6 @@
        "      <td>0.1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>20220109.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -210,38 +210,38 @@
        "</div>"
       ],
       "text/plain": [
-       "     RR   TN     HTN   TX     HTX   TM  TMNX     DG  TAMPLI  TNTXM  ...    UX  \\\n",
-       "0   2.6 -0.4  1759.0  3.4  1217.0  0.9  1.50  389.0     3.8    1.5  ...  99.0   \n",
-       "1   0.0 -2.5  1746.0  4.3  1327.0 -0.6  0.90  964.0     6.8    0.9  ...  99.0   \n",
-       "2  10.0 -6.9   718.0  1.6  2229.0 -1.2 -2.65  674.0     8.5   -2.7  ...  99.0   \n",
-       "3  13.2 -0.7   733.0  6.3  2319.0  2.4  2.80   87.0     7.0    2.8  ...  99.0   \n",
-       "4   7.6  0.4   737.0  2.2   601.0  1.8  1.30    0.0     1.8    1.3  ...  98.0   \n",
+       "         DATE    RR   TN     HTN   TX     HTX   TM  TMNX     DG  TAMPLI  ...  \\\n",
+       "0  2022-01-05   2.6 -0.4  1759.0  3.4  1217.0  0.9  1.50  389.0     3.8  ...   \n",
+       "1  2022-01-06   0.0 -2.5  1746.0  4.3  1327.0 -0.6  0.90  964.0     6.8  ...   \n",
+       "2  2022-01-07  10.0 -6.9   718.0  1.6  2229.0 -1.2 -2.65  674.0     8.5  ...   \n",
+       "3  2022-01-08  13.2 -0.7   733.0  6.3  2319.0  2.4  2.80   87.0     7.0  ...   \n",
+       "4  2022-01-09   7.6  0.4   737.0  2.2   601.0  1.8  1.30    0.0     1.8  ...   \n",
        "\n",
-       "      HUX  DHUMI40  DHUMI80  TSVM    UM  ETPGRILLE  NEIGETOTX  NEIGETOT06  \\\n",
-       "0   329.0      0.0   1157.0   5.7  88.0        0.4        0.0         0.0   \n",
-       "1  2304.0      0.0   1043.0   5.1  88.0        0.6        0.0         0.0   \n",
-       "2   126.0      0.0   1440.0   5.4  96.0        0.0        0.0         0.0   \n",
-       "3   618.0      0.0   1231.0   6.4  89.0        0.5        0.0         0.0   \n",
-       "4   745.0      0.0   1440.0   6.5  94.0        0.1        0.0         0.0   \n",
+       "      HUN    UX     HUX  DHUMI40  DHUMI80  TSVM    UM  ETPGRILLE  NEIGETOTX  \\\n",
+       "0  1244.0  99.0   329.0      0.0   1157.0   5.7  88.0        0.4        0.0   \n",
+       "1  1032.0  99.0  2304.0      0.0   1043.0   5.1  88.0        0.6        0.0   \n",
+       "2   708.0  99.0   126.0      0.0   1440.0   5.4  96.0        0.0        0.0   \n",
+       "3  1403.0  99.0   618.0      0.0   1231.0   6.4  89.0        0.5        0.0   \n",
+       "4     3.0  98.0   745.0      0.0   1440.0   6.5  94.0        0.1        0.0   \n",
        "\n",
-       "         DATE  \n",
-       "0  20220105.0  \n",
-       "1  20220106.0  \n",
-       "2  20220107.0  \n",
-       "3  20220108.0  \n",
-       "4  20220109.0  \n",
+       "   NEIGETOT06  \n",
+       "0         0.0  \n",
+       "1         0.0  \n",
+       "2         0.0  \n",
+       "3         0.0  \n",
+       "4         0.0  \n",
        "\n",
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 1. Charger les données\n",
-    "df = f.pd.read_csv(\"df_with_missing.csv\")\n",
+    "df = f.pd.read_csv(\"base.csv\")\n",
     "df.head()"
    ]
   },
