--- a/Rapport_final.ipynb
+++ b/Rapport_final.ipynb
@@ -108,15 +108,118 @@
     "                <li>A) Modélisation en utilisant les séries temporelles</li>\n",
     "                <li>B) Modélisation en utilisant le réseau de neurones</li>\n",
     "                <li>C) Modélisation en utilisant la régression linéaire</li>\n",
-    "                <li>D) Ma régression en utilisant Random Forest</li>\n",
+    "                <li>D) La régression en utilisant Random Forest</li>\n",
     "                <li>E) Comparaison des modèles</li>\n",
     "            </ul>\n",
     "        </a></li>\n",
     "        <li><a href=\"#Conclusion\" style=\"text-decoration: none; color: #0066cc;\">Conclusion</a></li>\n",
     "        <li><a href=\"#Limites et perspectives\" style=\"text-decoration: none; color: #0066cc;\">Limites et perspectives</a></li>\n",
+    "        <li><a href=\"#Reférences\" style=\"text-decoration: none; color: #0066cc;\">Reférences</a></li>\n",
     "    </ul>\n",
     "</div>\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Times New Roman', serif;\">\n",
+    "    <h1 style=\"text-align; color: blue; font-size: 32px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 1px;\">Pré-requis</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Times New Roman', serif;\">\n",
+    "    <h2 style=\"text-align: center; color: #2c3e50; font-size: 32px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 1px;\">Prédiction Météo en France</h2>\n",
+    "    <p style=\"font-size: 18px; line-height: 1.8; color: #34495e;\">\n",
+    "        La prévision météorologique en France est un enjeu crucial qui impacte notre quotidien. En anticipant les conditions climatiques, elle permet non seulement de planifier nos activités, mais aussi de protéger les vies et les biens face aux événements extrêmes.\n",
+    "    </p>\n",
+    "    <p style=\"font-size: 18px; line-height: 1.8; color: #34495e;\">\n",
+    "        Grâce à des outils de pointe comme les modèles numériques de Météo-France, nous avons accès à des prévisions de plus en plus précises. Dans un contexte de changement climatique, où les phénomènes météorologiques deviennent plus fréquents et intenses, la capacité à prévoir le temps est essentielle pour s'adapter et prendre des décisions éclairées.\n",
+    "    </p>\n",
+    "    <p style=\"font-size: 18px; line-height: 1.8; color: #34495e;\">\n",
+    "        En somme, comprendre la météo, c'est se donner les moyens d'affronter l'avenir avec sérénité.\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<style>\n",
+    "    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400&display=swap');\n",
+    "\n",
+    "    body {\n",
+    "        font-family: 'Roboto', sans-serif;\n",
+    "    }\n",
+    "\n",
+    "    h2 {\n",
+    "        font-family: 'Playfair Display', serif;\n",
+    "        color: #2c3e50;\n",
+    "    }\n",
+    "</style>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #f0f8ff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);\">\n",
+    "    <h2 style=\"text-align: center; color: #2c3e50; font-size: 28px; font-family: 'Comic Sans MS', cursive;\">🌤️ Objectifs du Projet de Prédiction Météo 🌧️</h2>\n",
+    "\n",
+    "<p style=\"font-size: 18px; line-height: 1.8; color: #34495e;\">\n",
+    "    <strong>1. Prévoir le Temps :</strong> <br>\n",
+    "    Fournir des prévisions météorologiques précises pour aider les gens à planifier leurs activités quotidiennes.\n",
+    "</p>\n",
+    "\n",
+    "\n",
+    "<p style=\"font-size: 18px; line-height: 1.8; color: #34495e;\">\n",
+    "        <strong>2.Alerter sur les Phénomènes Extrêmes :</strong> <br> \n",
+    "Informer rapidement le public sur les alertes météo, comme les tempêtes ou les vagues de chaleur, pour assurer la sécurité.\n",
+    "    </p>  \n",
+    "\n",
+    "<p style=\"font-size: 18px; line-height: 1.8; color: #34495e;\">\n",
+    "        <strong>3.Soutenir les Décisions :</strong> <br>  \n",
+    "Aider les entreprises et les collectivités à prendre des décisions éclairées basées sur les prévisions météorologiques.\n",
+    "    </p>  \n",
+    "    \n",
+    "</style>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #f0f8ff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);\">\n",
+    "    <h2 style=\"text-align: center; color: #2c3e50; font-size: 28px; font-family: 'Comic Sans MS', cursive;\"> Librairies </h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Times New Roman', serif;\">\n",
+    "    <h1 style=\"text-align; color: blue; font-size: 32px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 1px;\">I) Récupération de la base</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Times New Roman', serif;\">\n",
+    "    <h1 style=\"text-align; color: blue; font-size: 32px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 1px;\">II) Analyse exploratoire et statistiques descriptives</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Times New Roman', serif;\">\n",
+    "    <h1 style=\"text-align; color: blue; font-size: 32px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 1px;\">III) Travail préliminaire et modélisation</h1>"
    ]
   }
  ],
