--- a/Modélisation_finale.ipynb
+++ b/Modélisation_finale.ipynb
@@ -2810,7 +2810,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eh bien, je pense que cela prouve que les séries chronologiques sont très puissantes même lorsqu'elles ne sont pas utilisées avec leur algorithme le plus connu"
+    "Cela prouve que les séries chronologiques sont très puissantes même lorsqu'elles ne sont pas utilisées avec leur algorithme le plus connu"
    ]
   }
  ],
