--- a/Modélisation_finale.ipynb
+++ b/Modélisation_finale.ipynb
@@ -92,11 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Standardizing the size of all images \n",
+    "# Standardisation de la taille de chaque image\n",
     "mpl.rcParams['figure.figsize'] = (15,9)\n",
     "mpl.rcParams['font.size'] = 15"
    ]
