--- a/Rapport_final.ipynb
+++ b/Rapport_final.ipynb
@@ -221,6 +221,13 @@
     "<div style=\"width: 80%; margin: auto; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family: 'Times New Roman', serif;\">\n",
     "    <h1 style=\"text-align; color: blue; font-size: 32px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 1px;\">III) Travail préliminaire et modélisation</h1>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ggggg"
+   ]
   }
  ],
  "metadata": {
