--- a/Rapport_final.ipynb
+++ b/Rapport_final.ipynb
@@ -14,7 +14,7 @@
     "    <br>\n",
     "    <br>\n",
     "   <h1 style=\"text-align:center;color:Blue;font-family:algerian;font-size:35px;\">Projet de Python</h1>\n",
-    "<h1 style=\"text-align:center;color:Blue;font-family:algerian;font-size:20px;\">PREDICTION DE LA METEO</h1>\n",
+    "<h1 style=\"text-align:center;color:Blue;font-family:algerian;font-size:20px;\">PREDICTION DE LA TEMPERATURE</h1>\n",
     "    <br>\n",
     "    <br>\n",
     "    ***************\n",
@@ -23,7 +23,7 @@
     "\n",
     "<div style=\"width:100%;text-align: center;\">\n",
     "    <img src=\"https://c0.lestechnophiles.com/www.numerama.com/wp-content/uploads/2022/06/comparaison-2050-2022.jpg?resize=1024,576\" style=\"width:90%;height:100%;\" /> <br>\n",
-    "    <span style=\"font-size:20px;\"><strong>PREDICTION DE LA METEO<br></strong></span>\n",
+    "    <span style=\"font-size:20px;\"><strong>PREDICTION DE LA TEMPERATURE<br></strong></span>\n",
     "</div>\n",
     "    <br>\n",
     "    <br>\n",
@@ -34,7 +34,7 @@
     "            <br>\n",
     "           KUISSU CHEGAING Esthelle Paloma <br>\n",
     "           COMPRAORE Laureine Chérifa <br>\n",
-    "           SANOGO Aissetou Famihya <br>\n",
+    "           SANOGO Aissetou Fahmiya <br>\n",
     "\n",
     "</div>\n",
     "\n",
