--- a/Rapport_final.ipynb
+++ b/Rapport_final.ipynb
@@ -33,8 +33,8 @@
     "       <strong>Présenté par </strong>: <br>\n",
     "            <br>\n",
     "           KUISSU CHEGAING Esthelle Paloma <br>\n",
+    "           SANOGO Aissetou Fahmiya <br>\n",
     "           COMPRAORE Laureine Chérifa <br>\n",
-    "           SANOGO Aissetou Famihya <br>\n",
     "\n",
     "</div>\n",
     "\n",
