--- a/data.ipynb
+++ b/data.ipynb
@@ -903,7 +903,7 @@
    "outputs": [],
    "source": [
     "# On convertit la base de données existante en fichier cvs \n",
-    "datameteo.to_csv('data.csv', index=False)"
+    "datameteo.to_csv('Données/data.csv', index=False)"
    ]
   },
   {
@@ -1016,7 +1016,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
