message récupération des données et ajout des dommentaires des arbres de décision

--- a/Modélisation_finale.ipynb
+++ b/Modélisation_finale.ipynb
@@ -2874,7 +2874,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# *3) Modélisation avec Random Forest*"
+    "# *3) Modélisation avec Random Forest*\n",
+    "\n",
+    "Le Random Forest est un algorithme d'apprentissage automatique supervisé, largement utilisé pour les tâches de classification et de régression."
    ]
   },
   {
@@ -4060,13 +4062,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ainsi les variables les plus importantes sont EPTGRILLE: Evapotranspiration mensuelle, DG. La variable la moins importante est \"NEIGTOT06\"."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -4108,6 +4103,13 @@
     "f.plt.ylabel('Importance')\n",
     "f.plt.xlabel('Variable')\n",
     "f.plt.title('Variable Importances')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ainsi les variables les plus importantes sont EPTGRILLE: Evapotranspiration mensuelle, DG. La variable la moins importante est \"NEIGTOT06\"."
    ]
   },
   {
@@ -4556,6 +4558,26 @@
     "                               proportion=True)\n",
     "    graph = f.graphviz.Source(dot_data)\n",
     "    display(graph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le Random Forest génère un grand nombre d'arbres de décision indépendants. Chaque arbre est construit à partir d'un sous-ensemble aléatoire des données d'entraînement, ce qui introduit de la diversité parmi les arbres.\n",
+    "\n",
+    "Ici nous avons visualisé les 2 premiers arbres composant notre forêt aléatoire. \n",
+    "\n",
+    "\n",
+    "Interprétation du premier arbre:\n",
+    "\n",
+    "Nœud racine : L'arbre commence par EPTGRILLE .\n",
+    "\n",
+    "Branches : Chaque branche représente une condition sur EPTGRILLE  ( \"ETPGRILLE <= 1.65\" ou \"ETPGRILLE => 1.65\").\n",
+    "\n",
+    "Feuilles : Chaque feuille donne une prédiction de le température moyenne c'est-à-dire la catégorie ou l'étiquette à laquelle appartient la donnée qui atteint cette feuille suivant si la condition est satisfaite ou non.\n",
+    "\n",
+    "Ainsi, l'arbre de décision segmente l'espace des caractéristiques en régions homogènes en termes de températures, facilitant la prédiction de la température."
    ]
   },
   {
