--- a/RandomForestLaureine.ipynb
+++ b/RandomForestLaureine.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modélisation avec Random Forest"
+    "# *3) Modélisation avec Random Forest*\n",
+    "\n",
+    "Le Random Forest est un algorithme d'apprentissage automatique supervisé, largement utilisé pour les tâches de classification et de régression"
    ]
   },
   {
