--- a/Récupération des données.ipynb
+++ b/Récupération des données.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dans le cadre de ce projet, les données météorologiques ont été récupérées via l'API de Météo-France. Cette méthode permet d'accéder directement à des informations actualisées et fiables, en automatisant leur collecte grâce à des requêtes programmatiques."
+    "# Récupération des données avec l'API Meteo France\n",
+    "\n",
+    "La récupération des données à partir d'une API (Interface de Programmation d'Applications) est un processus clé dans l'interaction entre différentes applications ou services. Cette méthode permet d'accéder directement à des informations actualisées et fiables, en automatisant leur collecte grâce à des requêtes programmatiques.\n",
+    "Dans le cadre de ce projet, les données météorologiques ont été récupérées via l'API de Météo-France qui permet d'intégrer des données telles que les prévisions, les observations, les alertes.\n",
+    "\n",
+    "Pour Débuter, nous récupérons la liste de toutes les stations météos disponibles. Une station météo permet mesurer et enregistrer divers paramètres atmosphériques afin de fournir des informations sur les conditions météorologiques locales."
    ]
   },
   {
@@ -48,7 +53,7 @@
     }
    ],
    "source": [
-    "#on récupère la liste de toutes les stations avec l'API\n",
+    "#on récupère la liste de toutes les stations avec l'API ainsi que les coordonées telles que la longitude et la latitude\n",
     "import fonctions as f\n",
     "client=f.Client()\n",
     "\n",
@@ -45551,6 +45556,7 @@
     }
    ],
    "source": [
+    "#Apercu de la matrice2024 contentant les dates du mois de janvier à Octobre\n",
     "matrix2024"
    ]
   },
