--- a/Modélisation_finale.ipynb
+++ b/Modélisation_finale.ipynb
@@ -4575,9 +4575,7 @@
     "\n",
     "Branches : Chaque branche représente une condition sur EPTGRILLE  ( \"ETPGRILLE <= 1.65\" ou \"ETPGRILLE => 1.65\").\n",
     "\n",
-    "Feuilles : Chaque feuille donne une prédiction de le température moyenne c'est-à-dire la catégorie ou l'étiquette à laquelle appartient la donnée qui atteint cette feuille suivant si la condition est satisfaite ou non.\n",
-    "\n",
-    "Ainsi, l'arbre de décision segmente l'espace des caractéristiques en régions homogènes en termes de températures, facilitant la prédiction de la température."
+    "Feuilles : Chaque feuille donne une prédiction de le température moyenne c'est-à-dire la catégorie ou l'étiquette à laquelle appartient la donnée qui atteint cette feuille suivant si la condition est satisfaite ou non.\n"
    ]
   },
   {
