Vérification_du_main_à_partir_des_notebook

--- a/Modélisation_finale.ipynb
+++ b/Modélisation_finale.ipynb
@@ -374,7 +374,7 @@
    ],
    "source": [
     "# Chemin du fichier CSV\n",
-    "chemin_fichier = './base.csv'  # Remplacez par le chemin réel\n",
+    "chemin_fichier = 'Données/base.csv'  # Remplacez par le chemin réel\n",
     "\n",
     "# Charger le fichier CSV dans un DataFrame\n",
     "df = f.pd.read_csv(chemin_fichier)\n",
@@ -2912,7 +2912,7 @@
    "outputs": [],
    "source": [
     "#on divise la base en partie test et en partie entraînement\n",
-    "data= f.pd.read_csv(\"base.csv\", index_col =[\"DATE\"])\n",
+    "data= f.pd.read_csv(\"Données/base.csv\", index_col =[\"DATE\"])\n",
     "train_size = int(len(data) * 0.8)\n",
     "train, test = data[:train_size], data[train_size:]\n",
     "\n",
