Modification_dans_main_et_rapport_final

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -109,8 +109,8 @@
     "        ep.preprocess(nb, {'metadata': {'path': './'}})\n",
     "\n",
     "# Exécution des autres notebooks\n",
-    "#run_notebook('Récupération des données.ipynb')\n",
-    "#run_notebook('Analyse_Exploratoire&Statistiques_descriptives.ipynb')\n",
+    "run_notebook('Récupération des données.ipynb')\n",
+    "run_notebook('Analyse_Exploratoire&Statistiques_descriptives.ipynb')\n",
     "run_notebook('Modélisation_finale.ipynb')\n"
    ]
   }
